--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "@mdi/font": "5.9.55",
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
+    "lodash": "^4.17.21",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.5.4",
+    "vue-toastification": "^1.7.14",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
