--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.1.1",
     "lodash": "^4.17.21",
+    "qrcode": "^1.5.3",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.5.4",
